# formative-evaluation-class-assignments

./: pyproject.toml
assignment-4/: exp1.ipynb  exp2.ipynb
